// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Most Read Page A11y I can see the skip to content link 1`] = `"Ir al contenido"`;

exports[`AMP Most Read Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Most Read Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Most Read Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=62&p=mundo.popular.read.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x2=[amp]&x3=[news-mundo]&x4=[es]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[list-datadriven]&x8=[simorgh]&x9=[M%C3%A1s%2520le%C3%ADdas%2520-%2520BBC%2520News%2520Mundo]&x11=[2021-05-04T11%3A38%3A00Z]&x12=[2021-05-04T11%3A53%3A00Z]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Most Read Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "Most Read",
    "domain": "test.bbc.co.uk",
    "sections": "Mundo, Mundo - Most Read",
    "title": "Más leídas - BBC News Mundo",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Most Read Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Mundo",
  "url": "/mundo",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 2`] = `
{
  "text": "Por qué puedes confiar en la BBC",
  "url": "https://www.bbc.com/mundo/institucional-51359666",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 3`] = `
{
  "text": "Términos de uso",
  "url": "https://www.bbc.com/mundo/institucional-36400005",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 4`] = `
{
  "text": "Sobre la BBC",
  "url": "https://www.bbc.com/mundo/institucional-36400007",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 5`] = `
{
  "text": "Política de privacidad",
  "url": "https://www.bbc.com/mundo/institucional-36400009",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 7`] = `
{
  "text": "Escribe a BBC Mundo",
  "url": "https://www.bbc.co.uk/mundo/send/u50853489",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 8`] = `
{
  "text": "Lee sobre nuestra postura acerca de enlaces externos.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Most Read Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Most Read Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/mundo"`;

exports[`AMP Most Read Page Footer I can see the footer copyright and external linking text 1`] = `"© 2024 BBC. La BBC no se hace responsable del contenido de sitios externos. Lee sobre nuestra postura acerca de enlaces externos."`;

exports[`AMP Most Read Page Header I can see the branding 1`] = `"BBC News, Mundo"`;

exports[`AMP Most Read Page Header Navigation link should match text and url 1`] = `
{
  "text": "Noticias",
  "url": "/mundo",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 2`] = `
{
  "text": "América Latina",
  "url": "/mundo/topics/c7zp57yyz25t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 3`] = `
{
  "text": "Internacional",
  "url": "/mundo/topics/c2lej05epw5t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 4`] = `
{
  "text": "Hay Festival",
  "url": "/mundo/noticias-36795069",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 5`] = `
{
  "text": "Economía",
  "url": "/mundo/topics/c06gq9v4xp3t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 6`] = `
{
  "text": "Ciencia",
  "url": "/mundo/topics/ckdxnw959n7t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 7`] = `
{
  "text": "Salud",
  "url": "/mundo/topics/cpzd498zkxgt",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 8`] = `
{
  "text": "Cultura",
  "url": "/mundo/topics/c2dwq9zyv4yt",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 9`] = `
{
  "text": "Tecnología",
  "url": "/mundo/topics/cyx5krnw38vt",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 10`] = `
{
  "text": "Centroamérica Cuenta",
  "url": "/mundo/noticias-43826245",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 11`] = `
{
  "text": "BBC Extra",
  "url": "/mundo/noticias-48908206",
}
`;

exports[`AMP Most Read Page I can see the headline 1`] = `"Más leídas"`;

exports[`AMP Most Read Page I can see the list items 1`] = `"1¿Cuán viable es que el petro, la criptomoneda de Venezuela, sirva para aliviar la crisis en el país?Última actualización: 5 diciembre 2017"`;

exports[`AMP Most Read Page I can see the list items 2`] = `"2Cómo usar Google Maps sin conexión a internetÚltima actualización: 5 mayo 2016"`;

exports[`AMP Most Read Page I can see the list items 3`] = `"3Vivo sports test for nationsÚltima actualización: 2 julio 2015"`;

exports[`AMP Most Read Page I can see the list items 4`] = `"4El inquietante arte de fotografiar a los muertosÚltima actualización: 6 junio 2016"`;

exports[`AMP Most Read Page I can see the list items 5`] = `"5What's best for wine: cork or screw-capÚltima actualización: 21 septiembre 2017"`;

exports[`AMP Most Read Page I can see the list items 6`] = `"6El poder del "chilango" llegó a Londres 38Última actualización: 5 mayo 2016"`;

exports[`AMP Most Read Page I can see the list items 7`] = `"7El obrero que colgó una bandera de México en una torre Trump en Canadá 1Última actualización: 5 abril 2016"`;

exports[`AMP Most Read Page I can see the list items 8`] = `"8Zika en PanamáÚltima actualización: 6 junio 2016"`;

exports[`AMP Most Read Page I can see the list items 9`] = `"95 proyectos descomunales con los que China quiere mostrar su poderío científicoÚltima actualización: 5 mayo 2016"`;

exports[`AMP Most Read Page I can see the list items 10`] = `"10"Los peces se están haciendo adictos a comer plástico"Última actualización: 6 junio 2016"`;

exports[`AMP Most Read Page Main heading should match text 1`] = `"Más leídas"`;

exports[`AMP Most Read Page Most Read has item with rank 1`] = `
{
  "text": "¿Cuán viable es que el petro, la criptomoneda de Venezuela, sirva para aliviar la crisis en el país?",
  "url": "/mundo/23169857",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 2`] = `
{
  "text": "Cómo usar Google Maps sin conexión a internet",
  "url": "/mundo/blog-de-los-editores-23038590",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 3`] = `
{
  "text": "Vivo sports test for nations",
  "url": "/sport/live/22997963",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 4`] = `
{
  "text": "El inquietante arte de fotografiar a los muertos",
  "url": "/mundo/noticias-internacional-23048329",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 5`] = `
{
  "text": "What's best for wine: cork or screw-cap",
  "url": "/mundo/23154175",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 6`] = `
{
  "text": "El poder del "chilango" llegó a Londres 38",
  "url": "/mundo/aprenda-ingles-23038493",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 7`] = `
{
  "text": "El obrero que colgó una bandera de México en una torre Trump en Canadá 1",
  "url": "/mundo/america-latina-23032483",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 8`] = `
{
  "text": "Zika en Panamá",
  "url": "/mundo/noticias-america-latina-23049958",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 9`] = `
{
  "text": "5 proyectos descomunales con los que China quiere mostrar su poderío científico",
  "url": "/mundo/vert-cap-23038373",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 10`] = `
{
  "text": ""Los peces se están haciendo adictos a comer plástico"",
  "url": "/mundo/noticias-internacional-23049978",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/mundo/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-72x72.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-96x96.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-128x128.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-144x144.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-152x152.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-180x180.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-384x384.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-512x512.png",
}
`;

exports[`AMP Most Read Page SEO Canonical link 1`] = `"http://localhost:7080/mundo/popular/read"`;

exports[`AMP Most Read Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Most Read Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Most Read Page SEO Heading level 1 1`] = `"Más leídas"`;

exports[`AMP Most Read Page SEO Lang attribute 1`] = `"es"`;

exports[`AMP Most Read Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "es",
        "name": "Spanish",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/mundo/popular/read",
        "@type": "WebPage",
        "name": "Más leídas",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "publishingPrinciples": "https://www.bbc.com/mundo/institucional-51359666",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
      "url": "http://localhost:7080/mundo/popular/read",
    },
  ],
}
`;

exports[`AMP Most Read Page SEO OG description 1`] = `"Más leídas - BBC News Mundo"`;

exports[`AMP Most Read Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png"`;

exports[`AMP Most Read Page SEO OG image alt 1`] = `"BBC News Mundo"`;

exports[`AMP Most Read Page SEO OG locale 1`] = `"es-005"`;

exports[`AMP Most Read Page SEO OG site name 1`] = `"BBC News Mundo"`;

exports[`AMP Most Read Page SEO OG title 1`] = `"Más leídas - BBC News Mundo"`;

exports[`AMP Most Read Page SEO OG type 1`] = `"website"`;

exports[`AMP Most Read Page SEO OG url 1`] = `"http://localhost:7080/mundo/popular/read"`;

exports[`AMP Most Read Page SEO Page title 1`] = `"Más leídas - BBC News Mundo"`;

exports[`AMP Most Read Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Most Read Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Most Read Page SEO Twitter creator 1`] = `"@bbcmundo"`;

exports[`AMP Most Read Page SEO Twitter description 1`] = `"Más leídas - BBC News Mundo"`;

exports[`AMP Most Read Page SEO Twitter image alt 1`] = `"BBC News Mundo"`;

exports[`AMP Most Read Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png"`;

exports[`AMP Most Read Page SEO Twitter site 1`] = `"@bbcmundo"`;

exports[`AMP Most Read Page SEO Twitter title 1`] = `"Más leídas - BBC News Mundo"`;
